@@ -1,6 +1,8 @@
 Nutch Change Log
 
-* NUTCH-2182 Make reverseUrlDirs file dumper option hash the URL for consistency
+* NUTCH-2189 Domain filter must deactivate if no rules are present (markus)
+
+* NUTCH-2182 Make reverseUrlDirs file dumper option hash the URL for consistency (joyce)
 
 * NUTCH-2183 Improvement to SegmentChecker for skipping non-segments present in segments directory (lewismc)
 
